--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=iamroot
-#
-#spring.sql.init.mode=always
+
+
+spring.sql.init.mode=always
+
 #spring.jpa.show.sql=true
 
 #spring.jpa.hibernate.ddl-auto=none
